fix(app.css): the wrong style of the logo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         margin: 2em 0;
       }
 
+      #logo {
+        color: #ebebd3;
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-left: 25%;
+      }
+
       @media (max-width: 700px) {
         #logo {
           margin-left: 10%;
